discussion/kv_engine/178716/178716_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

Modernize parse_config [1/2]

Use a std::string view for the input string and make
it callback based instead.

Change-Id: I74f34fb4bf9959029589c199c1b1444a97df2a89

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-08-11 10:36:37.000000000
Message: 
Uploaded patch set 9: Patch Set 8 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-11 10:53:18.000000000
Message: 
Patch Set 9: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21671/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21671/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22393/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22393/ )

ThreadSanitizer issue: signal-unsafe call inside of a signal (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x33081) in __interceptor_malloc  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22393/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21319/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21319/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29697/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29697/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20567/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20567/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19383/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:95:12: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
           config_item items[],
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19383/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48271/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/utilities/config_parser.cc(93): error C3861: "strcasecmp": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48271/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18596/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40550/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9073/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9170/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
